--- a/index.html
+++ b/index.html
@@ -32,16 +32,18 @@
 
     <div class="section-inner">
         <section id="uvod" class="uvod">
-            <div class="uvod-left">
-                <h1>
-                    <span>Umím AI.</span>
-                    <span>A Vás to naučím taky.</span>
-                </h1>
-            </div>
-            <div class="uvod-right">
-                <img src="undraw_feeling-proud_tdos.svg" alt="AI počítač racky" />
-            </div>
-        </section>
+    <div class="uvod-left">
+        <h1>
+            <span>Umím AI.</span>
+            <span>A Vás to naučím taky.</span>
+        </h1>
+        <!-- Přidej obrázek pro mobil hned SEM -->
+        <img src="undraw_feeling-proud_tdos.svg" alt="AI počítač racky" class="uvod-img-mobile" />
+    </div>
+    <div class="uvod-right">
+        <img src="undraw_feeling-proud_tdos.svg" alt="AI počítač racky" />
+    </div>
+</section>
     </div>
 
     <hr class="section-divider">
