--- a/galerie.html
+++ b/galerie.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bydlení u řeky | BYDUKY s.r.o.</title>
-    <meta name="description" content="Představení společnosti BYDUKY s.r.o. a jejich podnikatelských cílů.">
-    <meta name="keywords" content="fiareal, společnost fiareal, představení, o společnosti, rekonstrukce, interiéry">
+    <title>Galerie | BYDUKY s.r.o.</title>
+    <meta name="description" content="Fotogalerie projektů společnosti FiaReal s.r.o.">
+    <meta name="keywords" content="fiareal, galerie, projekty, rekonstrukce, interiéry, fotografie">
     <meta name="robots" content="index, follow">
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="./styles.css" rel="stylesheet" type="text/css">
 </head>
-<body>
+
+<body class="gallery-page">
+    <!-- HEADER -->
     <div id="header">
         <div id="head_obal">
             <a href="./index.html"><img src="logo.PNG" id="logo_top" alt="BYDUKY s.r.o."></a>
@@ -20,7 +22,7 @@
             <div class="menu-right">
                 <a href="lokalita.html"><div class="button">Lokalita</div></a>
                 <span class="menu-separator">|</span>
-                <a href="galerie.html"><div class="button">Galerie</div></a>
+                <a href="galerie.html"><div class="button active">Galerie</div></a>
                 <span class="menu-separator">|</span>
                 <a href="kontakt.html"><div class="button last">Kontakt</div></a>
             </div>
@@ -50,16 +52,34 @@
         </div>
     </div>
 
+    <!-- OBSAH (GALERIE) -->
     <div id="outer">
         <div id="content">
-            <div class="hero-text">
-                <p class="hero-subtitle">Bydlení kousek od centra Ostravy, kde se dostanete pěšky, nebo na kole za pár minut.</p>
-                <br>
-                <p class="hero-subtitle">Připravujeme vizualizace domů.</p>
-            </div>
-            <div class="inner-image">
-                <div class="image-overlay">
-                    <img src="foto.jpeg" alt="BYDUKY s.r.o." class="main-photo">
+            <div class="gallery-grid">
+                <div class="gallery-item">
+                    <a href="foto.jpeg" target="_blank">
+                        <img src="foto.jpeg" alt="FiaReal foto 1">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="foto2.jpeg" target="_blank">
+                        <img src="foto2.jpeg" alt="FiaReal foto 2">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="foto3.jpeg" target="_blank">
+                        <img src="foto3.jpeg" alt="FiaReal foto 3">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="foto4.jpeg" target="_blank">
+                        <img src="foto4.jpeg" alt="FiaReal foto 4">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="domy.png" target="_blank">
+                        <img src="domy.png" alt="FiaReal domy">
+                    </a>
                 </div>
             </div>
         </div>
