--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
                 <div class="naucim-column">
                     <h3 class="green">Základy AI</h3>
                     <ul>
-                        <li><b>ChatGPT, Gemini, Claude, DeepSeek</b></li>
+                        <li><b>ChatGPT, Gemini, Claude, Grok</b></li>
                         <li>Základní příkazy</li>
                         <li>Práce s texty</li>
                         <li>Práce se soubory</li>
-                        <li>Vytvoření prezentace <b>za 5 minut</b></li>
-                        <li>Generování obrázků a videí</li>
-                        <li>AI v <b>Excelu, Wordu</b> a další</li>
+                        <li>Vytvoření prezentace <b>během 5 minut</b></li>
+                        <li>Generování obrázků a videí SORA, VEO</li>
+                        <li>Copilot v <b>Excelu, Wordu</b> a další</li>
                         <li>Srovnání placených verzí</li>
-                        <li><b>DeepL, OCR, Canva</b></li>
-                        <li>Bezpečnost</li>
+                        <li><b>Manus, OCR, Canva,</b></li>
+                        <li>Bezpečnost práce s AI</li>
                         <li>Copyright</li>
                     </ul>
                 </div>
@@ -72,16 +72,15 @@
                     <ul>
                         <li><b>3 hodiny</b> online/offline školení</li>
                         <li><b>2 hodiny</b> následné konzultace</li>
-                        <li>Prezentace, záznam a materiály<br>k dispozici po 1. školení</li>
+                        <li>Prezentace, záznam a materiály<br>k dispozici ihned po školení</li>
                         <li><b>Osobní certifikát</b></li>
                     </ul>
                 </div>
                 <div class="naucim-column">
                     <h3>Kolik to stojí</h3>
                     <ul>
-                        <li><b>25 000 Kč</b> do <b>10 lidí</b> online</li>
-                        <li>Při více lidech nebo školení<br>
-                        na místě napište prosím na <b>info@naucimai.cz</b></li>
+                        <li><b>25 000 Kč</b> za <b>školení online</b></li>
+                        <li>Pokud chcete osobní školení, prosím napište mi na email <b>info@naucimai.cz</b></li>
                     </ul>
                 </div>
             </div>
@@ -95,7 +94,7 @@
                         <li>Vytvoření funkční aplikace pro kolegy</li>
                         <li>Přidání <b>AI Chatbota</b> na web</li>
                         <li>Roboti a modely</li>
-                        <li><b>10 příkazů</b> na míru</li>
+                        <li><b>Příkazy</b> na míru Vašich potřeb</li>
                         <li>Generování <b>podcastů</b></li>
                         <li>Možnosti s <b>API</b></li>
                         <li>Stanovení rolí a přizpůsobení</li>
@@ -106,16 +105,15 @@
                     <ul>
                         <li><b>2 hodiny</b> online/offline školení</li>
                         <li><b>2 hodiny</b> následné konzultace</li>
-                        <li>Prezentace, záznam a materiály<br>k dispozici po 1. školení</li>
+                        <li>Prezentace, záznam a materiály<br>k dispozici ihned po školení</li>
                         <li><b>Osobní certifikát</b></li>
                     </ul>
                 </div>
                 <div class="naucim-column">
                     <h3>Kolik to stojí</h3>
                     <ul>
-                        <li><b>29 000 Kč</b> do <b>10 lidí</b> online</li>
-                        <li>Při více lidech nebo školení<br>
-                        na místě napište prosím na <b>info@naucimai.cz</b></li>
+                        <li><b>29 000 Kč</b> za <b>školení online</b></li>
+                        <li>Pokud chcete osobní školení, prosím napište mi na email <b>info@naucimai.cz</b></li>
                     </ul>
                 </div>
             </div>
