--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <li>Generování obrázků a videí SORA, VEO</li>
                         <li>Copilot v <b>Excelu, Wordu</b> a další</li>
                         <li>Srovnání placených verzí</li>
-                        <li><b>Manus, OCR, Canva,</b></li>
+                        <li><b>Manus, OCR, Canva</b></li>
                         <li>Bezpečnost práce s AI</li>
                         <li>Copyright</li>
                     </ul>
