--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
                 <div class="naucim-column">
                     <h3 class="green">Základy AI</h3>
                     <ul>
-                        <li><b>ChatGPT, Gemini, Claude, Grok</b></li>
-                        <li>Základní příkazy</li>
+                        <li><b>ChatGPT, Gemini, NotebookLM, Claude</b></li>
+                        <li>Jak psát příkazy</li>
                         <li>Práce s texty</li>
                         <li>Práce se soubory</li>
-                        <li>Vytvoření prezentace <b>během 5 minut</b></li>
-                        <li>Generování obrázků a videí SORA, VEO</li>
+                        <li>Vytváření prezentací <b>během 5 minut</b></li>
+                        <li>Generování obrázků a videí</li>
                         <li>Copilot v <b>Excelu, Wordu</b> a další</li>
                         <li>Srovnání placených verzí</li>
                         <li><b>Manus, OCR, Canva</b></li>
                         <li>Bezpečnost práce s AI</li>
-                        <li>Copyright</li>
+                        <li>Copyright obrázků</li>
                     </ul>
                 </div>
                 <div class="naucim-column">
@@ -79,8 +79,8 @@
                 <div class="naucim-column">
                     <h3>Kolik to stojí</h3>
                     <ul>
-                        <li><b>25 000 Kč</b> za <b>školení online</b></li>
-                        <li>Pokud chcete osobní školení, prosím napište mi na email <b>info@naucimai.cz</b></li>
+                        <li><b>20 000 Kč</b> za <b>školení a konzultace online</b></li>
+                        <li>Více informací na <b>info@naucimai.cz</b></li>
                     </ul>
                 </div>
             </div>
@@ -92,8 +92,8 @@
                         <li><b>Prolomení</b> AI bariér</li>
                         <li>Pokročilé scénáře z praxe</li>
                         <li>Vytvoření funkční aplikace pro kolegy</li>
-                        <li>Přidání <b>AI Chatbota</b> na web</li>
-                        <li>Roboti a modely</li>
+                        <li>Přidání <b>AI Chatbota</b> na Váš web</li>
+                        <li>AI Roboti a modely</li>
                         <li><b>Příkazy</b> na míru Vašich potřeb</li>
                         <li>Generování <b>podcastů</b></li>
                         <li>Možnosti s <b>API</b></li>
@@ -112,8 +112,8 @@
                 <div class="naucim-column">
                     <h3>Kolik to stojí</h3>
                     <ul>
-                        <li><b>29 000 Kč</b> za <b>školení online</b></li>
-                        <li>Pokud chcete osobní školení, prosím napište mi na email <b>info@naucimai.cz</b></li>
+                        <li><b>20 000 Kč</b> za <b>školení a konzultace online</b></li>
+                        <li>Více informací na <b>info@naucimai.cz</b></li>
                     </ul>
                 </div>
             </div>
@@ -126,17 +126,17 @@
                     <div class="naucim-grid"> 
                         <div>
                             <ul>
-                                <li><b>ChatGPT, Gemini, Claude, DeepSeek</b></li>
-                                <li>Základní příkazy</li>
+                                <li><b>ChatGPT, Gemini, NotebookLM, Claude</b></li>
+                                <li>Jak psát příkazy</li>
                                 <li>Práce s texty</li>
                                 <li>Práce se soubory</li>
-                                <li>Vytvoření prezentace <b>za 5 minut</b></li>
+                                <li>Vytváření prezentací <b>během 5 minut</b></li>
                                 <li>Generování obrázků a videí</li>
-                                <li>AI v <b>Excelu, Wordu</b> a další</li>
+                                <li>Copilot v <b>Excelu, Wordu</b> a další</li>
                                 <li>Srovnání placených verzí</li>
-                                <li><b>DeepL, OCR, Canva</b></li>
-                                <li>Bezpečnost</li>
-                                <li>Copyright</li>
+                                <li><b>Manus, OCR, Canva</b></li>
+                                <li>Bezpečnost práce s AI</li>
+                                <li>Copyright obrázků</li>
                             </ul>
                         </div>
                         <div>
@@ -144,16 +144,15 @@
                             <ul>
                                 <li><b>3 hodiny</b> online/offline školení</li>
                                 <li><b>2 hodiny</b> následné konzultace</li>
-                                <li>Prezentace, záznam a materiály<br>k dispozici po 1. školení</li>
+                                <li>Prezentace, záznam a materiály<br>k dispozici ihned po školení</li>
                                 <li><b>Osobní certifikát</b></li>
                             </ul>
                         </div>
                         <div>
                             <h3>Kolik to stojí</h3>
                             <ul>
-                                <li><b>25 000 Kč</b> do <b>10 lidí</b> online</li>
-                                <li>Při více lidech nebo školení<br>
-                                na místě napište prosím na <b>info@naucimai.cz</b></li>
+                                <li><b>20 000 Kč</b> za <b>školení a konzultace online</b></li>
+                                <li>Více informací na <b>info@naucimai.cz</b></li>
                             </ul>
                         </div>
                     </div>
@@ -169,9 +168,9 @@
                                 <li><b>Prolomení</b> AI bariér</li>
                                 <li>Pokročilé scénáře z praxe</li>
                                 <li>Vytvoření funkční aplikace pro kolegy</li>
-                                <li>Přidání <b>AI Chatbota</b> na web</li>
-                                <li>Roboti a modely</li>
-                                <li><b>10 příkazů</b> na míru</li>
+                                <li>Přidání <b>AI Chatbota</b> na Váš web</li>
+                                <li>AI Roboti a modely</li>
+                                <li><b>Příkazy</b> na míru Vašich potřeb</li>
                                 <li>Generování <b>podcastů</b></li>
                                 <li>Možnosti s <b>API</b></li>
                                 <li>Stanovení rolí a přizpůsobení</li>
@@ -182,16 +181,15 @@
                             <ul>
                                 <li><b>2 hodiny</b> online/offline školení</li>
                                 <li><b>2 hodiny</b> následné konzultace</li>
-                                <li>Prezentace, záznam a materiály<br>k dispozici po 1. školení</li>
+                                <li>Prezentace, záznam a materiály<br>k dispozici ihned po školení</li>
                                 <li><b>Osobní certifikát</b></li>
                             </ul>
                         </div>
                         <div>
                             <h3>Kolik to stojí</h3>
                             <ul>
-                                <li><b>29 000 Kč</b> do <b>10 lidí</b> online</li>
-                                <li>Při více lidech nebo školení<br>
-                                na místě napište prosím na <b>info@naucimai.cz</b></li>
+                                <li><b>20 000 Kč</b> za <b>školení a konzultace online</b></li>
+                                <li>Více informací na <b>info@naucimai.cz</b></li>
                             </ul>
                         </div>
                     </div>
@@ -212,7 +210,7 @@
                 </div>
                 <div class="logo-block">
                     <img src="Logo_města_jesenik(PNG).png" alt="Jeseník logo" />
-                    <div class="logo-text">Dva individuální semináře v letech <b>2024 a 2025</b>. První pro menší skupinu radních včetně paní starostky. Druhý pro <b>22 lidí</b> zaměřený hlavně na příklady z praxe na míru potřebám účastníků.</div>
+                    <div class="logo-text">Pravidelné konzultace v roce <b>2026</b> a dva individuální semináře v letech <b>2024 a 2025</b>. První pro menší skupinu radních včetně paní starostky. Druhý pro <b>22 lidí</b> zaměřený hlavně na příklady z praxe na míru potřebám účastníků.</div>
                 </div>
                 <div class="logo-block">
                     <img src="sluknov.png" alt="Klub personalistů logo" />
@@ -238,8 +236,8 @@
             <div class="lektor-flex">
                 <div class="lektor-info">
                     <p>Jmenuji se <b>Adam Sobanski</b> a jsem datovým analytikem ve společnosti <span class="red">ABB</span>.<br>
-                    K mé práci AI jednoduše patří a nejspíše <b>velkou část mé práce v budoucnu nahradí</b> :-).</p>
-                    <p>Ale než se tak stane, uplyne nějaká doba a lidé budou k práci AI potřebovat. <b>Kdo ji nevyužívá, tak je už dnes pozadu.</b></p>
+                    K mé práci AI jednoduše patří a nejspíše <b>část mé práce v budoucnu nahradí</b> :-).</p>
+                    <p>Ale než se tak stane, uplyne nějaká doba a lidé budou k práci AI potřebovat. <b>Kdo ji nevyužívá, je už dnes pozadu.</b></p>
                     <p>K tomu, abyste nebyli pozadu a mohli do světa AI vkročit bez zmatků, jsem tu já. S AI mám přímou <b>zkušenost od roku 2020</b>, kdy jsem začal tuto technologii využívat denně.</p>
                     <p>Za tu dobu jsem nasbíral dost zkušeností, které předávám dál. Vy tak <b>ušetříte spoustu času</b> namísto testování toho, co funguje a co ne. Samozřejmě jdu s dobou a ukážu vždy to <b>nejaktuálnější co AI nabízí i v placených verzích.</b></p>
                 </div>
@@ -268,7 +266,7 @@
 
     <div class="section-inner footer-container">
         <footer>
-            <span>&copy; 2025 Adam Sobanski</span>
+            <span>&copy; 2026 Adam Sobanski</span>
         </footer>
     </div>
 
